--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="./public/assets/css/burger_style.css">
+    <link rel="stylesheet" href="/assets/css/burger_style.css">
     <script src="/assets/js/burgers.js"></script>
     <title>Make & Eat Burger</title>
 </head>
 <body>
 
+    <img id="burgerPic" src="https://www.logodesign.net/logo-new/hamburger-with-bunch-of-fries-7174ld.png?size=1" alt="A picture of a burger and fries with the text 'BURGER JOINT' inside of the burger">
+
     {{{ body }}}
-    
+
 </body>
 </html>
