--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
 
     <div class="form-group">
         <label for="burg">Burger Name:</label>
-        <input type="text" id="burg" name="burger_name">
+        <input type="text" id="burg" name="name">
     </div>
 
     <div class="form-group">
